--- a/amazone/src/components/Header/Header.module.css
+++ b/amazone/src/components/Header/Header.module.css
@@ -3,6 +3,11 @@
     margin: 0;
     box-sizing: border-box;
 }
+.header__container{
+    position: sticky;
+    top: 0px;
+    z-index: 10;
+}
 .header{
     height: 60px;
     background-color: #121820;
