add responsive styles for category and carousel components

--- a/amazone/src/components/Carousal/Carousal.module.css
+++ b/amazone/src/components/Carousal/Carousal.module.css
@@ -9,3 +9,10 @@
     width: 100%;
     background: linear-gradient( rgba(255, 255, 255, 0),rgba(255, 255, 255,1));
 }
+
+@media (max-width : 540px) {
+    .shadow::before{
+        height: 50px;
+        width: 100%;
+    }
+}
