--- a/amazone/src/components/Catagory/CatagoryCard.module.css
+++ b/amazone/src/components/Catagory/CatagoryCard.module.css
@@ -23,3 +23,9 @@
    color: #3699eb;
    margin: 20px 5px;
 }
+
+@media (max-width : 540px) {
+    .CatagoryCard{
+       margin-top: 20px;
+    }
+}
